--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
           <div class="photos">
             <div class="row justify-content-center">
                 <div class="col-3">
-                    <div class="img-hover-zoom img-hover-zoom--blur"><a href="https://www.instagram.com/p/CWAJnLvPP4q/?utm_source=ig_web_copy_link"><img src="img/mini mito.jpg" alt="Efek Zoom Dan Rotate"></a></div>
+                    <div class="img-hover-zoom img-hover-zoom--blur"> <img src="img/mini mito.jpg" alt="mini mito"></div>
                 </div>
                 <div class="col-3">
-                  <div class="img-hover-zoom img-hover-zoom--blur"><a href="https://www.instagram.com/p/CVSicaTPp7H/?utm_source=ig_web_copy_link"><img src="img/foto estetik (1).jpg" alt="Efek Zoom Dan Rotate"></a></div>
+                  <div class="img-hover-zoom img-hover-zoom--blur"><img src="img/foto estetik (1).jpg" alt="tanaman 1"></div>
                 </div>
                 <div class="col-3">
                 <div class="img-hover-zoom img-hover-zoom--blur"><a href="#"><img src="img/foto estetik (7).jpg" alt="Efek Zoom Dan Rotate"></a></div>
