--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav m-sm-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#perkenalan">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">My Photos</a>
+              <a class="nav-link" href="#myphotos">My Photos</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">My Ability</a>
+              <a class="nav-link" href="#myability">My Ability</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">Social Media</a>
+              <a class="nav-link" href="#socialmedia">Social Media</a>
             </li>
           </ul>
         </div>
