--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <section id="katakata">
       <div class="row text-center">
         <div class="col">
-          <h3>-- ga berasa ya bentar lagi 2023 --</h3>
+          <h3>-- punya rasa bangga sendiri gitu kalo Bisa responsive --</h3>
           <h5>Ry | RNRYT</h5>
         </div>
       </div>
