--- a/index.html
+++ b/index.html
@@ -2,166 +2,124 @@
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
+    <meta charset="utf-8" data-color-mode="light">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-
-    <!-- font awesome cdn link  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 
-    <title>Ry | RNRYT Portfolio</title>
+    <!-- Fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+    crossorigin="anonymous" />
+
+    <!-- my css -->
     <link rel="stylesheet" href="style.css">
+
     <link rel="icon" href="img/logo.jpg">
+    <title>Ry Portfolio</title>
   </head>
   <body>
-    
     <!-- navbar awal -->
-    <section id="navbar1">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-secondary fixed-top">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav m-sm-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#perkenalan">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#myphotos">My Photos</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#myability">My Ability</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#socialmedia">Social Media</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </section>
-    <!-- navbar akhir -->
-
-    <!-- perkenalan awal -->
-    <section id="perkenalan">
-      <div class="row text-center">
-          <div class="col">
-              <img src="img/foto muka tamvan.jpg" alt="Foto Muka" width="200" class="rounded-circle img-thumbnail"/>
-              <div class="deskripsi">
-                  <a href="https://www.instagram.com/gvyrs.__/">RNRYT / Ry</a>
-                  <h5>Student - Web Developer - Content Creator</h5>
-              </div>
-          </div>
-      </div>
-    </section>
-    <!-- perkenalan akhir -->
-
-    <!-- my photos awal -->
-    <section id="myphotos">
-      <div class="row text-center">
-        <div class="col">
-          <h2>My Photos</h2>
-          <div class="photos">
-            <div class="row justify-content-center">
-                <div class="col-3">
-                    <div class="img-hover-zoom img-hover-zoom--blur"> <img src="img/mini mito.jpg" alt="mini mito"></div>
+    <section id="navbar">
+      <nav class="navbar navbar-expand-lg fixed-top z-10 navs-borders">
+        <div class="container">
+            <a class="navbar-brand" href="#"><img src="img/logo.jpg" alt="logo" title="#" width="100%"
+                    height="36"></a>
+            <div class="nav-logos"></div>
+            <button class="navbar-toggler border-0 pr-0" type="button" data-toggle="collapse"
+                data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <div class="nav-menu" onclick="openNavMenu(this)">
+                    <div class="bar1"></div>
+                    <div class="bar2"></div>
+                    <div class="bar3"></div>
                 </div>
-                <div class="col-3">
-                  <div class="img-hover-zoom img-hover-zoom--blur"><img src="img/foto estetik (1).jpg" alt="tanaman 1"></div>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav mx-auto navbarLinks">
+                    <a class="nav-item nav-link mx-2" href="#portfolio" data-toggle="collapse"
+                        data-target=".navbar-collapse.show">Portfolio</a>
+                    <a class="nav-item nav-link mx-2" href="#skill" data-toggle="collapse"
+                        data-target=".navbar-collapse.show">Skill</a>
+                    <a class="nav-item nav-link mx-2" href="#about" data-toggle="collapse"
+                        data-target=".navbar-collapse.show">About</a>
                 </div>
-                <div class="col-3">
-                <div class="img-hover-zoom img-hover-zoom--blur"><a href="#"><img src="img/foto estetik (7).jpg" alt="Efek Zoom Dan Rotate"></a></div>
-                </div>
+                <button
+                    class="btnChangeTheme btn btn-outline-dark btn-sm border-0 ml-3 shadow-none d-block mx-auto mx-lg-0 nav-link"
+                    data-toggle="collapse" data-target=".navbar-collapse.show">
+                    <i class="far fa-moon"></i>
+                </button>
             </div>
-          </div>
+        </div>
+    </nav>
+    </section>
+    <!-- Navbar akhir -->
+
+    <!-- home awal -->
+    <section id="home">
+      <div id="jumbotron" class="container mb-lg-5 mb-0">
+        <div class="row">
+
+            <div class="col-md-4 text-center order-md-2">
+                <img class="jumbotronImg shadow-lg bg-white" height="380" src="img/Foto Ry.jpg" alt="My photo">
+            </div>
+
+            <div class="col-md-6 offset-lg-1 jumbotronTitle">
+                <small class="mb-2">Hello Friend</small>
+                <h1>Ry | RNRYT</h1>
+                <p class="mb-2 font-weight-lighter">Proggramer | PhotoGraphers</p>  
+                <a href="https://github.com/RNRYT" class="h4 mx-1 text-secondary" title="Github"><i
+                 class="fab fa-github"></i></a>
+                <br>
+                <a href="#about" class="btn btn-dark nav-item mt-4 py-2">About me</a>
+            </div>
         </div>
       </div>
     </section>
-    <!-- my photos akhir -->
+    <!-- home akhir -->
 
-     <!-- my ability awal -->
-    <section id="myability">
-        <div class="row text-center">
-         <div class="col">
-          <h2>My Ability</h2>
-          <div class="gambar">
-            <div class="row justify-content-center">
-              <div class="col-3">
-                <div class="img-hover-zoom img-hover-zoom--blur"><img src="img/html.jpg" alt="Html"></div>
-                  <p><span>Html</span></p>
-              </div>
-              <div class="col-3">
-                <div class="img-hover-zoom img-hover-zoom--blur"><img src="img/css.jpg" alt="css"></div>
-                  <p><span>Css</span></p>
-              </div>
-              <div class="col-3">
-                <div class="img-hover-zoom img-hover-zoom--blur"><img src="img/bootstrap.png" alt="bootstrap"></div>
-                  <p><span>Bootstrap</span></p>
-              </div>
-              <div class="col-3">
-                <div class="img-hover-zoom img-hover-zoom--blur"><img src="img/tailwind.png" alt="Tailwind Css"></div>
-                  <p><span>Tailwind Css</span></p>
-              </div>
-             </div>
-          </div>  
-         </div>
+    <!-- about me awal -->
+    <section id="about">
+      <div class="row text-center justify-content-center">
+        <h2>About me</h2>
+      </div>
+      <div class="row justify-content-center text-center">
+        <div class="col-md-4">
+          <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, ipsam beatae. Veritatis quas quod, esse perferendis dolores qui maxime sed!</h5>
         </div>
-    </section>
-    <!-- my ability akhir -->
-
-    <!-- social media awal -->
-    <section id="socialmedia">
-        <div class="row text-center">
-         <div class="col">
-          <h2>Social Media</h2>
-          <div class="row justify-content-center">
-            <div class="col">
-              <a href="https://www.instagram.com/gvyrs.__/"><i class="fab fa-instagram"></i></a>
-            </div>
-            <div class="col">
-              <a href="https://t.me/RNRYT_Ry"><i class="fab fa-telegram"></i></a>
-            </div>
-            <div class="col">
-              <a href="discord.html"><i class="fab fa-discord"></i></a>
-            </div>
-            <div class="col">
-              <a href="https://github.com/RNRYT"><i class="fab fa-github"></i></a>
-            </div>
-            <div class="col">
-              <a href="https://www.youtube.com/channel/UCkxwcSPHKc82HC4I_TPVEdA"><i class="fab fa-youtube"></i></a>
-            </div>
-          </div>
-         </div>
+        <div class="col-md-4">
+          <h5>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur recusandae sequi at, quas officiis harum perferendis facere voluptates dolorem nesciunt?</h5>
         </div>
-    </section>
-    <!-- social media akhir -->
-
-    <!-- kata kata awal -->
-    <section id="katakata">
-      <div class="row text-center">
-        <div class="col">
-          <h3>-- punya rasa bangga sendiri gitu kalo Bisa responsive --</h3>
-          <h5>Ry | RNRYT</h5>
+      </div>
+      <div class="row text-center justify-content-center">
+        <div class="btn">
+          <a href="https://github.com/RNRYT" class="h4 mx-1 text-secondary" title="Github"><i
+            class="fab fa-github"></i></a>
+          <a href="https://instagram.com/gvyrs.__" class="h4 mx-1 text-secondary" title="Instagram"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.youtube.com/channel/UCkxwcSPHKc82HC4I_TPVEdA" class="h4 mx-1 text-secondary" title="Youtube"><i class="fab fa-youtube"></i></a>
         </div>
       </div>
     </section>
-    <!-- kata kata akhir -->
+    <!-- about me akhir -->
 
-    <!-- copyrights awal -->
-    <section id="copyright">
-      <div class="wrapper">
-        &copy; 2022 - 2023 <b>Ry</b> All rights Reserved.
+    <!-- my hobbies awal -->
+    <section id="hobbies">
+      <div class="row text-center justify-content-center">
+        <h2>My Hobbies</h2>
+        <img src="" alt="">
       </div>
     </section>
-    <!-- copyrights akhir -->
 
+    <!-- my hobbies akhir -->
 
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <script src="vendor/jquery/jquery.js"></script>
+    <script src="vendor/jquery/jquery.easing.1.3.js"></script>
+    <script src="vendor/popper/popper.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
+    <!-- js -->
+    <script src="script.js"></script>
   </body>
 </html>
