--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="row">
             <div class="col-md">
                 <div class="card hobbys-borders border-0 p-2 bg-transparent mb-3" style="max-width: 50%;">
-                    <div class="row no-gutters  ">
+                    <div class="row no-gutters">
                         <div class="col-md-4 d-flex align-items-center">
                             <img src="img/coding.webp" class="card-img shadow-lg"
                                 title="Photo bt Luca Bravo on Unsplash" alt="hobby">
@@ -138,6 +138,19 @@
                         </div>
                     </div>
                 </div>
+                <div class="card hobbys-borders border-0 p-2 bg-transparent mb-3" style="max-width: 50%;">
+                  <div class="row no-gutters">
+                      <div class="col-md-4 d-flex align-items-center">
+                          <img src="img/sepeda.jpg" class="card-img shadow-lg"
+                              title="Photo bt Luca Bravo on Unsplash" alt="hobby">
+                      </div>
+                      <div class="col-md-8 d-flex align-items-center">
+                          <div class="card-body p-0 pl-3 mt-2 mb-3">
+                              <h5 class="card-title">Sepedahan</h5>
+                          </div>
+                      </div>
+                  </div>
+              </div>
             </div>
         </div>
     </div>
