--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <div class="col-lg-8 col offset-lg-2">
                         <div class="card p-3 containers-border-1 shadow">
                             <div class="card-body">
-                                <p class="card-text text-justify">Hello Nama ku RNRYT (nama panggung) panggil saja Ry saya berumur 10 Tahun Dan saya memulai belajar Coding dari 2021 pertengahan sampai sekarang dan saya tinggal Di indonesia - jakarta </p>
+                                <p class="card-text text-justify">Hello Nama ku RNRYT (nama panggung) panggil saja Ry saya berumur 10 Tahun Dan saya memulai belajar Coding dari 2021 pertengahan sampai sekarang dan saya tinggal Di indonesia - jakarta Dan saya memiliki Cita-Cita : Proggramer dan menjadi Pemotor</p>
                             </div>
                         </div>
                     </div>
