--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="row">
 
             <div class="col-md-4 text-center order-md-2">
-                <img class="jumbotronImg shadow-lg bg-white" height="380" src="img/Foto Ry.jpg" alt="RNRYT">
+                <img class="jumbotronImg shadow-lg bg-white" height="380" src="" alt="RNRYT">
             </div>
 
             <div class="col-md-6 offset-lg-1 jumbotronTitle">
